k8s/model-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-deployment
spec:
  replicas: 1
  selector:
      matchLabels:
        app: model-service
  template:
    metadata:
      labels:
        app: model-service
    spec:
      containers:
        - name: model-container
          image: dodateam2025-team4/model-service:latest
          ports:
            - containerPort: 8081
