k8s/model-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: model-ingress
spec:
  defaultBackend:
    service:
      name: model-service
      port:
        number: 8081
